# IWTI

./: Cargo.toml  README.md
src/: main.rs  parser.rs  weaps.txt
