[package]
name = "IWTI"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.143", features = ["derive"]}
serde_json = "1.0.83"
serde_any = "0.5.0" # I am habing a strok pls help
reqwest = {version = "0.11.11", features = ["blocking"]}
substring = "1.4.5"
